--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,6 @@
     <title>Contained Flask</title>
   </head>
   <body>
-    <h1>Hello!</h1>
-    
-    <p>This is a Flask App containerised with Docker</p>
+    <h1>How's that for a slice of fried gold?</h1>
   </body>
 </html>
